# git-in-haskell-from-the-bottom-up

./: .ghci  Client.hs  LICENSE  PackProtocol.hs  README.md  Rakefile  TcpClient.hs  build.sh  clone.hs  hgit.cabal  ls-remote-tcp.hs  ls-remote.hs  test-with-coverage.sh
example/: pack-225db5b79ae469fff723e64a5126d803a864a08d.idx  pack-225db5b79ae469fff723e64a5126d803a864a08d.pack  pack-6e006075ba71fd8c811d95297d79fef21300c413.idx  pack-6e006075ba71fd8c811d95297d79fef21300c413.pack
src/: Main.hs  ls-remote-tcp.hs
src/Git/: Common.hs  Delta.hs  ObjectStore.hs  PackProtocol.hs  Packfile.hs  Remote.hs  Repository.hs  TcpClient.hs  Unpack.hs
src/Git/Pack/: Delta.hs  Packfile.hs
src/Git/Remote/: Operations.hs  PackProtocol.hs  TcpClient.hs
src/Git/Store/: Blob.hs  Index.hs  Object.hs  ObjectStore.hs  Unpack.hs
tests/src/: TestRunner.hs
tests/src/Git/: CommonTests.hs  RemoteTests.hs
tests/src/Git/Store/: BlobTest.hs  ObjectTest.hs
